--- a/templates/about.html
+++ b/templates/about.html
@@ -1,2 +1,6 @@
-<!-- templates/pages/about.html -->
-<h1> About page  </h1>
+<!-- templates/about.html -->
+{% extends "base.html" %}
+
+{% block content %}
+<h1>About page</h1>
+{% endblock content %}
