--- a/templates/home.html
+++ b/templates/home.html
@@ -1,2 +1,6 @@
-<!-- templates/pages/home.html -->
-<h1> Homepage  </h1>
+<!-- templates/home.html -->
+
+{% extends "base.html" %}
+{% block content %}
+<h1> Homepage </h1>
+{% endblock content %}
